# graph-dynamo

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
graph_dynamo/: graph_calculus.py
scgraph/: tangent_space.py
