[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "graph_dynamo"
version = "0.1.1"
description = "graph-dynamo"
authors = ["xing1@pitt.edu"]

[tool.poetry.dependencies]
python = "^3.8"
graph-dynamo = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"